--- a/package.json
+++ b/package.json
@@ -10,14 +10,13 @@
   },
   "dependencies": {
     "@ant-design/icons": "^4.7.0",
+    "@reduxjs/toolkit": "^1.9.1",
     "antd": "^4.20.2",
     "axios": "^1.2.2",
-    "immutable": "^4.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
     "redux": "^4.2.0",
-    "redux-immutable": "^4.0.0",
     "redux-thunk": "^2.4.2"
   },
   "devDependencies": {
